--- a/style.css
+++ b/style.css
@@ -1,26 +1,17 @@
+@charset 'utf-8';
+
+/*** body ***/
+body {
+    background: #f8f8f8;
+    margin: 0;
+}
+
+/*** header ***/
 #open_menu {
     float: right;
     font-size: 24px;
     cursor: pointer;
 }
-
-textarea {
-//    width: 500px;
-//    height: 200px;
-    margin-top: 25px;
-    margin-bottom: 20px;
-}
-
-#ulBtn, #olBtn, #clrBtn {
-    margin: 5px 5px;
-    font-size: 8pt;
-}
-
-.container {
-    width: 90%;
-    margin: 0 auto;
-}
-
 
 header h1 {
     font-size: 28px;
@@ -28,6 +19,13 @@ header h1 {
     margin: 0.67em 0;
 }
 
+/*** list area ***/
+textarea {
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+/*** item area ***/
 .itemarea {
     background: #fff;
     padding: 30px 0;
@@ -36,8 +34,24 @@ header h1 {
     text-align: center;
 }
 
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
+
+/*** button area ***/
+#ulBtn, #olBtn, #clrBtn {
+    margin: 5px 5px;
+    font-size: 8pt;
+}
+
 #btnArea {
     margin-top: 15px;
+}
+
+/*** option area ***/
+#option ul li {
+    list-style-type: none;
 }
 
 #h_size,
@@ -47,4 +61,10 @@ header h1 {
 
 #ankerLabel {
     width: 30em;
+}
+
+/*** footer ***/
+footer p {
+    text-align: center;
+    color: gray;
 }
